Fix HTML entities and update hidden message
Replaced HTML entities with actual characters and added a new message.

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     
     <div id="final-text-container">
         <div class="final-text">I Love You</div>
-        <div class="final-subtext">Sayang</div>
+        <div class="final-subtext">Amelia</div>
     </div>
 
     <div id="hidden-message-box">
@@ -440,4 +440,5 @@ karena tujuan aku cuman satu yaitu kamu, sekali lagi aku minta maaf, aku belum b
 
     </script>
 </body>
+
 </html>
